--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <!-- <script src="src/index.js"></script> -->
-  <script src="dist/main.js"></script>
+  <!-- <script src="dist/main.js"></script> -->
+  <!-- html-webpack-plugin 会自动将打包的结果 JavaScript 引入这里 -->
 </body>
 </html>
