--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>HelloWebpack</title>
 </head>
 <body>
+  <div id="app"></div>
   <!-- <script src="src/index.js"></script> -->
   <!-- <script src="dist/main.js"></script> -->
   <!-- html-webpack-plugin 会自动将打包的结果 JavaScript 引入这里 -->
